<resources>
    <string name="app_name">DEKAT</string>
    <string name="register_tv">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have a account?</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_scan">Scan</string>
    <string name="tittle_favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="favorite">Favorite</string>
    <string name="searchbar_hint">Search</string>
    <string name="tv_scan1">Pindai Kain Tapis</string>
    <string name="tv_scan2">Silahkan foto kain Tapis untuk mengetahui motifnya</string>
    <string name="tv_scan3">Pindai</string>
    <string name="kain_tapis">Nama Tapis</string>
    <string name="fabric_brand"> Kain Silung</string>
    <string name="description">Deskripsi:</string>
    <string name="detail_fabric">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="find_location">Cari Lokasi Terdekat</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tv_toolbar">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_about">"DEKAT (Deteksi Kain Tapis) adalah sebuah solusi inovatif yang bertujuan untuk merawat dan melestarikan kekayaan budaya Lampung. Aplikasi ini berfungsi sebagai sarana edukasi dan promosi yang memungkinkan pengguna mengenali dan memahami kain Tapis Lampung yang terkenal dengan keindahan motif khasnya serta nilai sejarah yang mendalam. "</string>
    <string name="about">About</string>
    <string name="tv_kegunaan">Kegunaan: </string>
    <string name="value_kegunaan">kegunaan value</string>
    <string name="tv_makna">Makna:</string>
    <string name="value_makna">makna value</string>
    <string name="logo">Logo</string>
    <string name="result">Result</string>
    <string name="scan_desc">Dengan memindai kain Tapismu, aplikasi akan menganalisis pola dan memberikan informasi yang relevan terkait kain Tapis anda.</string>
    <string name="loc_desc">Anda tidak hanya bisa mengeksplorasi keindahan dan detil dari Kain Tapis, tetapi juga mendapatkan informasi tentang lokasi-lokasi terdekat yang menyediakan Kain Tapis yang sesuai dengan preferensi Anda</string>
    <string name="knowledge_desc">Kain tapis memiliki banyak kegunaan, mulai dari busana adat, hiasan dinding, hingga souvenir. Kain tapis juga memiliki nilai simbolis dan spiritual yang penting dalam budaya Lampung.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_find_location">Temukan Lokasi Kainmu</string>
    <string name="scan_on_board">Pindai Kain Tapismu</string>
    <string name="desc_logo">Deteksi Kain Tapis</string>
    <string name="desc_kegunaan">Keindahan dan Kegunaan</string>
    <string name="learn_more">Yuk Cari Tau Lebih Banyak!</string>
    <string name="detai_fabric">Detail Kain</string>
    <string name="find_loc">Cari lokasi</string>
</resources>